// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/gradle-wrapper/artifacts updateArtifacts - distributionSha256Sum artifact error: httpSnapshots 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "services.gradle.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://services.gradle.org/distributions/gradle-6.3-bin.zip.sha256",
  },
]
`;

exports[`manager/gradle-wrapper/artifacts updateArtifacts - distributionSha256Sum updates: httpSnapshots 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "host": "services.gradle.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://services.gradle.org/distributions/gradle-6.3-bin.zip.sha256",
  },
]
`;

exports[`manager/gradle-wrapper/artifacts updateArtifacts - distributionSha256Sum updates: result 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "b53425e31c65841011c94d39234ab04ad96fa39a1a60d79b48ac9796b04fb609",
      "name": "gradle/wrapper/gradle-wrapper.properties",
    },
  },
]
`;

exports[`manager/gradle-wrapper/artifacts updateArtifacts - replaces existing value updates from version: result 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "464a521ebb1a5d5d33bb0db6ca87a7cb57ade6e2ebb7c6dc13b982ea5cdced09",
      "name": "gradle/wrapper/gradle-wrapper.properties",
    },
  },
]
`;
